@@ -1,22 +1,22 @@
-# This file is used for making 64-bit libraries development packages.
-TMPDIR/usr/lib*/libanl.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libBrokenLocale.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libbsd-compat.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libc.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libc_nonshared.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libcrypt.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libdl.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libg.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libieee.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libm.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libmcheck.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libnsl.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libpthread.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libpthread_nonshared.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libresolv.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/librpcsvc.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/librt.a usr/libDESTLIBDIR
-TMPDIR/usr/lib*/libutil.a usr/libDESTLIBDIR
+# This file is used for making biarch libraries development packages.
+TMPDIR/LIBDIR/libanl.a LIBDIR
+TMPDIR/LIBDIR/libBrokenLocale.a LIBDIR
+TMPDIR/LIBDIR/libbsd-compat.a LIBDIR
+TMPDIR/LIBDIR/libc.a LIBDIR
+TMPDIR/LIBDIR/libc_nonshared.a LIBDIR
+TMPDIR/LIBDIR/libcrypt.a LIBDIR
+TMPDIR/LIBDIR/libdl.a LIBDIR
+TMPDIR/LIBDIR/libg.a LIBDIR
+TMPDIR/LIBDIR/libieee.a LIBDIR
+TMPDIR/LIBDIR/libm.a LIBDIR
+TMPDIR/LIBDIR/libmcheck.a LIBDIR
+TMPDIR/LIBDIR/libnsl.a LIBDIR
+TMPDIR/LIBDIR/libpthread.a LIBDIR
+TMPDIR/LIBDIR/libpthread_nonshared.a LIBDIR
+TMPDIR/LIBDIR/libresolv.a LIBDIR
+TMPDIR/LIBDIR/librpcsvc.a* LIBDIR
+TMPDIR/LIBDIR/librt.a LIBDIR
+TMPDIR/LIBDIR/libutil.a LIBDIR
 
-TMPDIR/usr/lib*/*.o usr/libDESTLIBDIR
-TMPDIR/usr/lib*/*.so usr/libDESTLIBDIR
+TMPDIR/LIBDIR/*.o LIBDIR
+TMPDIR/LIBDIR/*.so LIBDIR
