@@ -1,6 +1,7 @@
-# This file is used for 64-bit libraries.
-TMPDIR/lib*/*.so* libDESTLIBDIR
-TMPDIR/usr/lib*/gconv/*.so* usr/libDESTLIBDIR/gconv
+# This file is used for biarch libraries.
+TMPDIR/SLIBDIR/*.so* SLIBDIR
+TMPDIR/LIBDIR/gconv/*.so* LIBDIR/gconv/
+
 TMPDIR/lib/ldconfig/* lib/ldconfig
 TMPDIR/lib/*-*-gnu/ lib
 TMPDIR/usr/lib/*-*-gnu/ usr/lib
