@@ -1,3 +1,3 @@
 # This file is used for making NPTL and other
 # optimized libraries.
-TMPDIR/lib*/*.so* libDESTLIBDIR
+TMPDIR/SLIBDIR/*.so* SLIBDIR
