@@ -36,8 +36,9 @@ with_headers = --with-headers=$(shell pwd)/debian/include --enable-kernel=$(call
 nptl_add-ons = nptl $(add-ons)
 nptl_extra_config_options = $(extra_config_options) --disable-profile
 nptl_extra_cflags = -g1 -O3
+nptl_slibdir = /lib/tls
+nptl_libdir = /usr/lib/nptl
 nptl_MIN_KERNEL_SUPPORTED = 2.6.0
-nptl_LIBDIR = /tls
 
 KERNEL_HEADER_DIR = $(stamp)mkincludedir
 $(stamp)mkincludedir:
