@@ -4,6 +4,9 @@ glibc (2.3.6-3) UNRELEASED; urgency=low
   * Use a shell function instead of ifneq when testing a variable depending on
     $(curpass), otherwise it is only evaluated at the first pass.
   * Add support for the ppc64 architecture.  (Closes: #301438).
+  * Use the new slibdir, libdir, rtlddir variables to build the various
+    flavours of the libc. Put them directly in the final directory, and
+    remove the corresponding tweaks done after the make install phase.
 
   [ Clint Adams ]
   * Get rid of -o as a binary operator to [ in tzconfig and postinst.
